[tool.poetry]
name = "nlp-with-transformers-book-my-notes"
version = "0.1.0"
description = ""
authors = ["Hamza B."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.51.3"
notebook = "^7.4.2"
pandas = "^2.2.3"
torch = "^2.7.0"
torchvision = "^0.22.0"
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
